syntax = "proto3";
package stroptpb;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/sryoya/protoreflect-go-examples/protobuf/stroptpb";

extend google.protobuf.FieldOptions {
    StringOpts opts = 52346;
}

message StringOpts {
    optional int32 len = 1;
    // If len exists, these below fields would be ignored
    optional int32 max_len = 2;
    optional int32 min_len = 3;

    optional string regexp = 10;
}

